cros: Fix launcher drag state after multi touch menu dismissal

Handle the case where the menu is not dismissed due to a drag sequence.
This was not handled gracefully, and resulted in a bad drag state on the
app icon.

finger. Then touch the screen somewhere else.

Example: Show a menu on an app icon via long press, don't release the
Bug: 876440
Change-Id: I8ebde0669aec7b7925fb1c855008cbfbaa8b3683
Reviewed-on: https://chromium-review.googlesource.com/c/1340822
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609027}
Former-commit-id: c2976ff8722e8436e3a7e26a708d5adcf07d290e